Colaboratory を使用して作成しました

--- a/study_GoogleColaboratory.ipynb
+++ b/study_GoogleColaboratory.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Upgrade statsmodels."
+        "### Upgrade statsmodels."
       ]
     },
     {
@@ -57,7 +57,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Import libraries."
+        "### Import libraries."
       ]
     },
     {
@@ -86,7 +86,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Uplaod the AirPassengers data which was downloaded from Kaggole into Google Coloaboratory."
+        "### Uplaod the AirPassengers data which was downloaded from Kaggole into Google Coloaboratory."
       ]
     },
     {
@@ -156,7 +156,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Import the AirPassengers data which was uploaded into the Google Colaboratory as Pandas DataFrame.\n",
+        "### Import the AirPassengers data which was uploaded into the Google Colaboratory as Pandas DataFrame.\n",
         "\n",
         "  - Set \"Month\" column as datetime index. \n",
         "  - Set \"Passengers\" column as float."
@@ -186,7 +186,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Show the head and tail of the DataFrame."
+        "### Show the head and tail of the DataFrame."
       ]
     },
     {
@@ -351,7 +351,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Show the data on a line chart.\n",
+        "### Show the data on a line chart.\n",
         "  - The chart has a period.\n",
         "    - The number of passenger depends on season. \n",
         "    - It's high in summer and low in winter.\n",
@@ -408,7 +408,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Use the data from 1949-01-01 to 1958-12-31 as the train data."
+        "### Use the data from 1949-01-01 to 1958-12-31 as the train data."
       ]
     },
     {
