Colaboratory を使用して作成しました

--- a/studyGoogleColaboratory.ipynb
+++ b/studyGoogleColaboratory.ipynb
@@ -29,6 +29,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "L51U2pb2CkyW",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Time series forecasting with Prophet\n",
+        "Prophetを用いて、時系列予測を行う"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YT4C2cZ36UPZ",
         "colab_type": "text"
       },
