--- a/studyLossFunctionAndGradientDescentMethod.ipynb
+++ b/studyLossFunctionAndGradientDescentMethod.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -416,6 +416,15 @@
        "       [ 2.   , 32.371,  1.941, -0.128],\n",
        "       [ 3.   , 26.174,  1.921,  0.098],\n",
        "       [ 4.   , 21.324,  1.902,  0.298]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.990e+02, 2.270e+00, 1.550e-06, 1.821e+00]])"
       ]
      },
      "metadata": {},
@@ -447,7 +456,8 @@
     "\n",
     "# Set number of digits of precision for floating point output. / 浮動小数点の表示有効桁数を設定\n",
     "np.set_printoptions(precision=3)\n",
-    "display(history[:5])"
+    "display(history[:5])\n",
+    "display(history[-1:])"
    ]
   },
   {
@@ -2776,6 +2786,43 @@
     "                               frames=200, interval=100, blit=True, repeat=True)\n",
     "\n",
     "HTML(anim.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4 : Create linear regression model using Scikit-learn library.\n",
+    "Scikit-learnのライブラリを使って線形回帰モデルを作成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result from Step 2 :  w0 =   0.00 / w1 =   1.82\n",
+      "Result from Step 4 :  w0 =  -0.00 / w1 =   1.82\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import linear_model\n",
+    "clf = linear_model.LinearRegression()\n",
+    "\n",
+    "# Create prediction model. / 予測モデルを作成\n",
+    "clf.fit(x_tmp, yt)\n",
+    "\n",
+    "# Get y-intercept and 切片と傾きの取得\n",
+    "W0 = clf.intercept_\n",
+    "W1 = clf.coef_\n",
+    "\n",
+    "print('Result from Step 2 :  w0 = %6.2f / w1 = %6.2f' % (w0, w1))\n",
+    "print('Result from Step 4 :  w0 = %6.2f / w1 = %6.2f' % (W0, W1))"
    ]
   },
   {
