--- a/studyLossFunctionAndGradientDescentMethod.ipynb
+++ b/studyLossFunctionAndGradientDescentMethod.ipynb
@@ -2798,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2817,20 +2817,14 @@
     "# Create prediction model. / 予測モデルを作成\n",
     "clf.fit(x_tmp, yt)\n",
     "\n",
-    "# Get y-intercept and 切片と傾きの取得\n",
+    "# Get y-intercept and inclenation. / 切片と傾きの取得\n",
     "W0 = clf.intercept_\n",
     "W1 = clf.coef_\n",
     "\n",
+    "# Compare values.\n",
     "print('Result from Step 2 :  w0 = %6.2f / w1 = %6.2f' % (w0, w1))\n",
     "print('Result from Step 4 :  w0 = %6.2f / w1 = %6.2f' % (W0, W1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
