--- a/study03_python_Tkinter.ipynb
+++ b/study03_python_Tkinter.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,45 +135,48 @@
     "                    if self.is_movable(position):\n",
     "                        move_list.append(position)\n",
     "        return move_list\n",
-    "#-------------------------------------------\n",
-    "    # 局面を進める\n",
+    "\n",
+    "    # Move / ピースを置く\n",
     "    def move(self, position):\n",
-    "        # 石を打つ\n",
+    "        # Set value\n",
     "        self.board[position.y][position.x] = self.turn\n",
     "        \n",
-    "        # 石をひっくり返す\n",
-    "        # 各方向に石をひっくり返せるか調べる\n",
+    "        # Flap the opponent's pieces.\n",
     "        for dir in Board.DIR:\n",
     "            y = position.y + dir[0]\n",
     "            x = position.x + dir[1]\n",
     "            if y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == -self.turn:\n",
-    "                # 隣が相手の石\n",
     "                y += dir[0]\n",
     "                x += dir[1]\n",
+    "                # Move strait as long as the opponent's piece continues.\n",
+    "                # 相手のピースが続いている限り直線的に移動\n",
     "                while y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == -self.turn:\n",
     "                    y += dir[0]\n",
     "                    x += dir[1]\n",
+    "                # After moving in a straight line, check if my piece is at the end point.\n",
+    "                # 直線的に移動した後、終点に自分のピースがあるかをチェック\n",
     "                if y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == self.turn:\n",
-    "                    # この方向は返せる\n",
-    "                    # 1マス戻る\n",
     "                    y -= dir[0]\n",
     "                    x -= dir[1]\n",
-    "                    # 戻りながら返す\n",
+    "                    # In case of there is my own piece at the end, flap the opponent's piece upside down.\n",
+    "                    # 終点に自分のピースがある場合、戻りながら相手のピースを裏返す\n",
     "                    while y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x]==-self.turn:\n",
     "                        self.board[y][x] = self.turn\n",
     "                        y -= dir[0]\n",
     "                        x -= dir[1]\n",
     "    \n",
-    "        self.turn = -self.turn  # 手番を変更\n",
-    "        self.move_num += 1    # 手数を増やす\n",
+    "        # Change the turn.\n",
+    "        self.turn = -self.turn\n",
+    "        # Incriment the number of moving\n",
+    "        self.move_num += 1\n",
     "\n",
-    "    # パスする\n",
+    "    # Passing\n",
     "    def move_pass(self):\n",
     "        self.turn = -self.turn  # パス\n",
-    "  \n",
-    "    # 対局終了の判定\n",
+    "\n",
+    "    # Judgement of the game end. / 対局終了の判定\n",
     "    def is_game_end(self):\n",
-    "        # 60手に達した時\n",
+    "        # When reatching 60 move. / 60手に達した時\n",
     "        if self.move_num == 61:\n",
     "            return True\n",
     "\n",
