--- a/study03_python_Tkinter.ipynb
+++ b/study03_python_Tkinter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
     "\n",
     "    # Passing\n",
     "    def move_pass(self):\n",
-    "        self.turn = -self.turn  # パス\n",
+    "        self.turn = -self.turn\n",
     "\n",
     "    # Judgement of the game end. / 対局終了の判定\n",
     "    def is_game_end(self):\n",
@@ -180,21 +180,20 @@
     "        if self.move_num == 61:\n",
     "            return True\n",
     "\n",
-    "        # 黒白どちらかの石数が0になった時\n",
-    "        # 黒白の石数をタプルで取得\n",
+    "        # When the number of my pieces or opponent's became 0./.自分か相手のピースの数が0になった時\n",
     "        (black_discs, white_discs) = self.get_discs()\n",
     "        if black_discs == 0 or white_discs == 0:\n",
     "            return True\n",
     "\n",
-    "        # 黒白どちらも手がない場合\n",
+    "        # There is no square to put a piece. / 黒白どちらも手がない場合\n",
     "        move_list1 = self.get_move_list()\n",
     "        if len(move_list1) == 0:\n",
-    "            self.move_pass()  # パスして相手番にする\n",
+    "            self.move_pass()\n",
     "            move_list2 = self.get_move_list()\n",
-    "            self.move_pass()  # パスして戻す\n",
+    "            self.move_pass()\n",
     "            if len(move_list2) == 0:\n",
     "                return True\n",
-    "\n",
+    "            \n",
     "        return False"
    ]
   },
@@ -222,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
