--- a/study03_python_Tkinter.ipynb
+++ b/study03_python_Tkinter.ipynb
@@ -202,7 +202,73 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Game:\n",
+    "    GAME_WAIT = 0\n",
+    "    GAME_ONGOING = 1\n",
+    "    GAME_END = 2\n",
+    "    HUMAN = 0\n",
+    "    COMPUTER = 1\n",
+    "    \n",
+    "    # Initialize game.\n",
+    "    def __init__(self):\n",
+    "        self.game_mode = GAME_WAIT\n",
+    "        self.black_player = HUMAN\n",
+    "        self.white_player = COMPUTER\n",
+    "        self.board = Board()\n",
+    "        self.board.init_board()\n",
+    "  \n",
+    "    # Start game.\n",
+    "    def start(self, _black_player, _white_player):\n",
+    "        self.black_player = _black_player\n",
+    "        self.white_player = _white_player\n",
+    "        self.game_mode = GAME_ONGOING\n",
+    "        self.board.init_board()\n",
+    "  \n",
+    "    # Continue the game.\n",
+    "    def game_move(self, position):\n",
+    "        self.board.move(position)\n",
+    "        draw_board()\n",
+    "\n",
+    "        # 終局判定\n",
+    "        if self.board.is_game_end():\n",
+    "            self.game_mode = 2    # 対局終了\n",
+    "            disp_mess()        # メッセージ表示\n",
+    "            messagebox.showinfo(u\"\", u\"対局終了\")\n",
+    "            return\n",
+    "\n",
+    "        # パス判定\n",
+    "        move_list = self.board.get_move_list()\n",
+    "        if len(move_list) == 0:\n",
+    "            # 石を打てる場所がないのでパス\n",
+    "            self.board.move_pass()  \n",
+    "            messagebox.showinfo(u\"パス\", \\\n",
+    "            u\"打てる場所がないのでパスします\")\n",
+    "\n",
+    "        disp_mess()          # メッセージ表示\n",
+    "    \n",
+    "    # 次の手番はコンピュータか？\n",
+    "    def is_com_turn(self):\n",
+    "        if self.board.turn == BLACK and \\\n",
+    "            self.black_player == 1 or \\\n",
+    "            self.board.turn == WHITE and \\\n",
+    "            self.white_player == 1:\n",
+    "            return True\n",
+    "        \n",
+    "        return False\n",
+    "  \n",
+    "    # 次の手番がコンピュータなら\n",
+    "    # AIに指し手を選択させる\n",
+    "    def proc_com_turn(self):\n",
+    "        while True:\n",
+    "            if self.is_com_turn():\n",
+    "                position = AI().select_move(self.board)\n",
+    "                self.game_move(position) # 局面を進める\n",
+    "            if self.game_mode == 2:\n",
+    "                break  # 対局終了していたら抜ける\n",
+    "            else:\n",
+    "                break\n"
+   ]
   }
  ],
  "metadata": {
