--- a/study03_python_Tkinter.ipynb
+++ b/study03_python_Tkinter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,28 @@
     "SPACE = 0\n",
     "BLACK = 1\n",
     "WHITE = -1\n",
+    "\n",
     "BOARD_SQUARE = 8\n",
     "BOARD_SQUARE_X = BOARD_SQUARE\n",
     "BOARD_SQUARE_Y = BOARD_SQUARE\n",
+    "\n",
     "BOARD_PX_SIZE = 500\n",
-    "BOARD_CELL_PX_SIZE = BOARD_PX_SIZE / BOARD_SQUARE"
+    "BOARD_CELL_PX_SIZE = BOARD_PX_SIZE / BOARD_SQUARE\n",
+    "\n",
+    "MOVEDIR = [[-1, -1], [-1, 0], [-1, 1],\n",
+    "           [ 0, -1],          [ 0, 1],\n",
+    "           [ 1, -1], [ 1, 0], [ 1, 1]]\n",
+    "\n",
+    "GAME_WAIT = 0\n",
+    "GAME_ONGOING = 1\n",
+    "GAME_END = 2\n",
+    "HUMAN = 0\n",
+    "COMPUTER = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Board:\n",
-    "    DIR = [[-1, -1], [-1, 0], [-1, 1],\n",
-    "           [ 0, -1],          [ 0, 1],\n",
-    "           [ 1, -1], [ 1, 0], [ 1, 1]]\n",
-    "    \n",
+    "\n",
     "    def __init__(self):\n",
     "        self.turn = BLACK\n",
     "        self.move_num = 1\n",
@@ -102,7 +111,7 @@
     "    \n",
     "        # Can flipp white/black to black/white?\n",
     "        # ピースを裏返すことが出来るか\n",
-    "        for dir in Board.DIR:\n",
+    "        for dir in MOVEDIR:\n",
     "            # Get coordinate around the original position.\n",
     "            # 指定位置の周りの座標を取得\n",
     "            y = position.y + dir[0]\n",
@@ -142,7 +151,7 @@
     "        self.board[position.y][position.x] = self.turn\n",
     "        \n",
     "        # Flap the opponent's pieces.\n",
-    "        for dir in Board.DIR:\n",
+    "        for dir in MOVEDIR:\n",
     "            y = position.y + dir[0]\n",
     "            x = position.x + dir[1]\n",
     "            if y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == -self.turn:\n",
@@ -199,16 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Game:\n",
-    "    GAME_WAIT = 0\n",
-    "    GAME_ONGOING = 1\n",
-    "    GAME_END = 2\n",
-    "    HUMAN = 0\n",
-    "    COMPUTER = 1\n",
     "    \n",
     "    # Initialize game.\n",
     "    def __init__(self):\n",
@@ -230,45 +234,112 @@
     "        self.board.move(position)\n",
     "        draw_board()\n",
     "\n",
-    "        # 終局判定\n",
+    "        # When the game is over.\n",
     "        if self.board.is_game_end():\n",
-    "            self.game_mode = 2    # 対局終了\n",
-    "            disp_mess()        # メッセージ表示\n",
-    "            messagebox.showinfo(u\"\", u\"対局終了\")\n",
+    "            self.game_mode = GAME_END\n",
+    "            disp_mess()\n",
+    "            messagebox.showinfo(u\"\", u\"The game is over.\")\n",
     "            return\n",
     "\n",
-    "        # パス判定\n",
+    "        # When passed.\n",
     "        move_list = self.board.get_move_list()\n",
     "        if len(move_list) == 0:\n",
-    "            # 石を打てる場所がないのでパス\n",
     "            self.board.move_pass()  \n",
-    "            messagebox.showinfo(u\"パス\", \\\n",
-    "            u\"打てる場所がないのでパスします\")\n",
+    "            messagebox.showinfo(u\"Pass\", u\"Can not make a valid move.\")\n",
     "\n",
-    "        disp_mess()          # メッセージ表示\n",
+    "        disp_mess()\n",
     "    \n",
-    "    # 次の手番はコンピュータか？\n",
+    "    # Is next move computer?\n",
     "    def is_com_turn(self):\n",
-    "        if self.board.turn == BLACK and \\\n",
-    "            self.black_player == 1 or \\\n",
-    "            self.board.turn == WHITE and \\\n",
-    "            self.white_player == 1:\n",
+    "        if (self.board.turn == BLACK and self.black_player == COMPUTER) or \\\n",
+    "            (self.board.turn == WHITE and self.white_player == COMPUTER):\n",
     "            return True\n",
     "        \n",
     "        return False\n",
     "  \n",
-    "    # 次の手番がコンピュータなら\n",
-    "    # AIに指し手を選択させる\n",
+    "    # Select next move by computer.\n",
     "    def proc_com_turn(self):\n",
     "        while True:\n",
     "            if self.is_com_turn():\n",
-    "                position = AI().select_move(self.board)\n",
-    "                self.game_move(position) # 局面を進める\n",
-    "            if self.game_mode == 2:\n",
-    "                break  # 対局終了していたら抜ける\n",
+    "                position = CmpAded().select_move(self.board)\n",
+    "                self.game_move(position)\n",
+    "            if self.game_mode == GAME_END:\n",
+    "                break\n",
     "            else:\n",
-    "                break\n"
+    "                break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CmpAded:\n",
+    "    # Select next move by computer.\n",
+    "    def select_move(self, board):\n",
+    "        time.sleep(1)\n",
+    "        move_list = board.get_move_list()\n",
+    "        # Choose a next move at random\n",
+    "        r = random.randint(0, len(move_list) - 1)\n",
+    "        return move_list[r]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_board():\n",
+    "    global game\n",
+    "    global canvas_board\n",
+    "    \n",
+    "    # Clear the canvas.\n",
+    "    canvas_board.delete('all')\n",
+    "    # Set background.\n",
+    "    canvas_board.create_rectangle(0, 0, \\\n",
+    "                                  BOARD_PX_SIZE, BOARD_PX_SIZE, \\\n",
+    "                                  outline=\"#196F3D\", fill = \"#229954\")\n",
+    "    \n",
+    "    for y in range(BOARD_SQUARE_Y):\n",
+    "        for x in range(BOARD_SQUARE_X):\n",
+    "            piece = game.board.board[y][x]\n",
+    "            if piece == SPACE:\n",
+    "                color = \"\"\n",
+    "            elif piece == BLACK:\n",
+    "                color = \"#566573\"\n",
+    "            else: # piece == WHITE\n",
+    "                color = \"#F8F9F9\"\n",
+    "            # Draw pieces.\n",
+    "            if color != \"\":\n",
+    "                canvas_board.create_oval( \\\n",
+    "                    x*BOARD_SQUARE_PX_SIZE+4, y*BOARD_SQUARE_PX_SIZE+4, \\\n",
+    "                    (x+1)*BOARD_SQUARE_PX_SIZE-4, (y+1)*BOARD_SQUARE_PX_SIZE-4, \\\n",
+    "                    outline=\"#196F3D\", fill=color) \n",
+    "\n",
+    "    # Draw border lines.\n",
+    "    for x in range(1, BOARD_SQUARE_X):\n",
+    "        canvas_board.create_line( \\\n",
+    "            x * BOARD_SQUARE_PX_SIZE, 0, \\\n",
+    "            x * BOARD_SQUARE_PX_SIZE, BOARD_PX_SIZE, \\\n",
+    "            fill=\"#196F3D\", width=2)\n",
+    "        \n",
+    "    for y in range(1, BOARD_SQUARE_Y):\n",
+    "        canvas_board.create_line( \\\n",
+    "            0, y * BOARD_SQUARE_PX_SIZE, \\\n",
+    "            BOARD_PX_SIZE, y * BOARD_SQUARE_PX_SIZE, \\\n",
+    "            fill=\"#196F3D\", width=2)\n",
+    "\n",
+    "    canvas_board.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
