--- a/study03_python_Tkinter.ipynb
+++ b/study03_python_Tkinter.ipynb
@@ -5,334 +5,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Study Tkinter through the creation of rever."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define constant and import libraries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class : Manage a coordinate of a target square."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class : Manage the board."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class : Manage the game progress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class : Computer thinking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Re-Draw the board."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Show status on the dialog."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# coding: utf8\n",
-    "import random\n",
-    "import time\n",
-    "import math\n",
-    "import tkinter\n",
-    "from tkinter import messagebox\n",
-    "\n",
-    "SPACE = 0\n",
-    "BLACK = 1\n",
-    "WHITE = -1\n",
-    "\n",
-    "BOARD_SQUARE = 8\n",
-    "BOARD_SQUARE_X = BOARD_SQUARE\n",
-    "BOARD_SQUARE_Y = BOARD_SQUARE\n",
-    "\n",
-    "BOARD_PX_SIZE = 500\n",
-    "BOARD_CELL_PX_SIZE = BOARD_PX_SIZE / BOARD_SQUARE\n",
-    "\n",
-    "MOVEDIR = [[-1, -1], [-1, 0], [-1, 1],\n",
-    "           [ 0, -1],          [ 0, 1],\n",
-    "           [ 1, -1], [ 1, 0], [ 1, 1]]\n",
-    "\n",
-    "GAME_WAIT = 0\n",
-    "GAME_ONGOING = 1\n",
-    "GAME_END = 2\n",
-    "HUMAN = 0\n",
-    "COMPUTER = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Position:\n",
-    "    def __init__(self):\n",
-    "        self.y = 0\n",
-    "        self.x = 0\n",
-    "  \n",
-    "    def __init__(self, y, x):\n",
-    "        self.y = y\n",
-    "        self.x = x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Board:\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.turn = BLACK\n",
-    "        self.move_num = 1\n",
-    "        self.board = [[SPACE for i in range(8)] for j in range(8)]\n",
-    "        #  ---- board\n",
-    "        # [[0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "        #  [0, 0, 0, 0, 0, 0, 0, 0]]\n",
-    "\n",
-    "    # Initialize the board. / 盤面を初期化\n",
-    "    def init_board(self):\n",
-    "        self.board = [[SPACE for i in range(BOARD_SQUARE_X)] for j in range(BOARD_SQUARE_Y)]\n",
-    "        self.board[3][3] = WHITE\n",
-    "        self.board[3][4] = BLACK\n",
-    "        self.board[4][3] = BLACK\n",
-    "        self.board[4][4] = WHITE\n",
-    "        self.turn = BLACK  # turn / 手番\n",
-    "        self.move_num = 1  # number of moves in attack./ 手数\n",
-    "  \n",
-    "    # Count black and white pieces. / 白と黒のピースの数を数える\n",
-    "    def get_discs(self):\n",
-    "        black_discs = 0\n",
-    "        white_discs = 0\n",
-    "        for y in range(BOARD_SQUARE_Y):\n",
-    "            for x in range(c):\n",
-    "                disc = self.board[y][x]\n",
-    "            if disc == BLACK:\n",
-    "                black_discs += 1\n",
-    "            elif disc == WHITE:\n",
-    "                white_discs += 1\n",
-    "        return (black_discs, white_discs)\n",
-    "\n",
-    "    # Can place a new piece or not? / ピースを配置できるかどうか\n",
-    "    def is_movable(self, position):\n",
-    "        # Is the position ocupied or opened? / 配置位置が空いているか\n",
-    "        if self.board[position.y][position.x] != SPACE:\n",
-    "            return False\n",
-    "    \n",
-    "        # Can flipp white/black to black/white?\n",
-    "        # ピースを裏返すことが出来るか\n",
-    "        for dir in MOVEDIR:\n",
-    "            # Get coordinate around the original position.\n",
-    "            # 指定位置の周りの座標を取得\n",
-    "            y = position.y + dir[0]\n",
-    "            x = position.x + dir[1]\n",
-    "            \n",
-    "            if y >= 0 and x >= 0 and \\\n",
-    "                y < BOARD_SQUARE_Y and x < BOARD_SQUARE_X and \\\n",
-    "                self.board[y][x] == -self.turn: # Is it an opponent peice? / 相手のピースか\n",
-    "                y += dir[0]\n",
-    "                x += dir[1]\n",
-    "                # Move strait as long as the opponent's piece continues.\n",
-    "                # 相手のピースが続いている限り直線的に移動\n",
-    "                while y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == -self.turn:\n",
-    "                    y += dir[0]\n",
-    "                    x += dir[1]\n",
-    "                # After moving in a straight line, check if my piece is at the end point.\n",
-    "                # 直線的に移動した後、終点に自分のピースがあるかをチェック\n",
-    "                if y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == self.turn:\n",
-    "                    return True\n",
-    "      \n",
-    "        return False\n",
-    "  \n",
-    "    # Get a list of squares which can put peice in. / ピースを置けるマスのリストを取得 \n",
-    "    def get_move_list(self):\n",
-    "        move_list = []\n",
-    "        for y in range(8):\n",
-    "            for x in range(8):\n",
-    "                if self.board[y][x] == SPACE:\n",
-    "                    position = Position(y, x)\n",
-    "                    if self.is_movable(position):\n",
-    "                        move_list.append(position)\n",
-    "        return move_list\n",
-    "\n",
-    "    # Move / ピースを置く\n",
-    "    def move(self, position):\n",
-    "        # Set value\n",
-    "        self.board[position.y][position.x] = self.turn\n",
-    "        \n",
-    "        # Flap the opponent's pieces.\n",
-    "        for dir in MOVEDIR:\n",
-    "            y = position.y + dir[0]\n",
-    "            x = position.x + dir[1]\n",
-    "            if y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == -self.turn:\n",
-    "                y += dir[0]\n",
-    "                x += dir[1]\n",
-    "                # Move strait as long as the opponent's piece continues.\n",
-    "                # 相手のピースが続いている限り直線的に移動\n",
-    "                while y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == -self.turn:\n",
-    "                    y += dir[0]\n",
-    "                    x += dir[1]\n",
-    "                # After moving in a straight line, check if my piece is at the end point.\n",
-    "                # 直線的に移動した後、終点に自分のピースがあるかをチェック\n",
-    "                if y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x] == self.turn:\n",
-    "                    y -= dir[0]\n",
-    "                    x -= dir[1]\n",
-    "                    # In case of there is my own piece at the end, flap the opponent's piece upside down.\n",
-    "                    # 終点に自分のピースがある場合、戻りながら相手のピースを裏返す\n",
-    "                    while y >= 0 and x >= 0 and y < 8 and x < 8 and self.board[y][x]==-self.turn:\n",
-    "                        self.board[y][x] = self.turn\n",
-    "                        y -= dir[0]\n",
-    "                        x -= dir[1]\n",
-    "    \n",
-    "        # Change the turn.\n",
-    "        self.turn = -self.turn\n",
-    "        # Incriment the number of moving\n",
-    "        self.move_num += 1\n",
-    "\n",
-    "    # Passing\n",
-    "    def move_pass(self):\n",
-    "        self.turn = -self.turn\n",
-    "\n",
-    "    # Judgement of the game end. / 対局終了の判定\n",
-    "    def is_game_end(self):\n",
-    "        # When reatching 60 move. / 60手に達した時\n",
-    "        if self.move_num == 61:\n",
-    "            return True\n",
-    "\n",
-    "        # When the number of my pieces or opponent's became 0./.自分か相手のピースの数が0になった時\n",
-    "        (black_discs, white_discs) = self.get_discs()\n",
-    "        if black_discs == 0 or white_discs == 0:\n",
-    "            return True\n",
-    "\n",
-    "        # There is no square to put a piece. / 黒白どちらも手がない場合\n",
-    "        move_list1 = self.get_move_list()\n",
-    "        if len(move_list1) == 0:\n",
-    "            self.move_pass()\n",
-    "            move_list2 = self.get_move_list()\n",
-    "            self.move_pass()\n",
-    "            if len(move_list2) == 0:\n",
-    "                return True\n",
-    "            \n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Game:\n",
-    "    \n",
-    "    # Initialize game.\n",
-    "    def __init__(self):\n",
-    "        self.game_mode = GAME_WAIT\n",
-    "        self.black_player = HUMAN\n",
-    "        self.white_player = COMPUTER\n",
-    "        self.board = Board()\n",
-    "        self.board.init_board()\n",
-    "  \n",
-    "    # Start game.\n",
-    "    def start(self, _black_player, _white_player):\n",
-    "        self.black_player = _black_player\n",
-    "        self.white_player = _white_player\n",
-    "        self.game_mode = GAME_ONGOING\n",
-    "        self.board.init_board()\n",
-    "  \n",
-    "    # Continue the game.\n",
-    "    def game_move(self, position):\n",
-    "        self.board.move(position)\n",
-    "        draw_board()\n",
-    "\n",
-    "        # When the game is over.\n",
-    "        if self.board.is_game_end():\n",
-    "            self.game_mode = GAME_END\n",
-    "            disp_mess()\n",
-    "            messagebox.showinfo(u\"\", u\"The game is over.\")\n",
-    "            return\n",
-    "\n",
-    "        # When passed.\n",
-    "        move_list = self.board.get_move_list()\n",
-    "        if len(move_list) == 0:\n",
-    "            self.board.move_pass()  \n",
-    "            messagebox.showinfo(u\"Pass\", u\"Can not make a valid move.\")\n",
-    "\n",
-    "        disp_mess()\n",
-    "    \n",
-    "    # Is next move computer?\n",
-    "    def is_com_turn(self):\n",
-    "        if (self.board.turn == BLACK and self.black_player == COMPUTER) or \\\n",
-    "            (self.board.turn == WHITE and self.white_player == COMPUTER):\n",
-    "            return True\n",
-    "        \n",
-    "        return False\n",
-    "  \n",
-    "    # Select next move by computer.\n",
-    "    def proc_com_turn(self):\n",
-    "        while True:\n",
-    "            if self.is_com_turn():\n",
-    "                position = CmpAded().select_move(self.board)\n",
-    "                self.game_move(position)\n",
-    "            if self.game_mode == GAME_END:\n",
-    "                break\n",
-    "            else:\n",
-    "                break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CmpAded:\n",
-    "    # Select next move by computer.\n",
-    "    def select_move(self, board):\n",
-    "        time.sleep(1)\n",
-    "        move_list = board.get_move_list()\n",
-    "        # Choose a next move at random\n",
-    "        r = random.randint(0, len(move_list) - 1)\n",
-    "        return move_list[r]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_board():\n",
-    "    global game\n",
-    "    global canvas_board\n",
-    "    \n",
-    "    # Clear the canvas.\n",
-    "    canvas_board.delete('all')\n",
-    "    # Set background.\n",
-    "    canvas_board.create_rectangle(0, 0, \\\n",
-    "                                  BOARD_PX_SIZE, BOARD_PX_SIZE, \\\n",
-    "                                  outline=\"#196F3D\", fill = \"#229954\")\n",
-    "    \n",
-    "    for y in range(BOARD_SQUARE_Y):\n",
-    "        for x in range(BOARD_SQUARE_X):\n",
-    "            piece = game.board.board[y][x]\n",
-    "            if piece == SPACE:\n",
-    "                color = \"\"\n",
-    "            elif piece == BLACK:\n",
-    "                color = \"#566573\"\n",
-    "            else: # piece == WHITE\n",
-    "                color = \"#F8F9F9\"\n",
-    "            # Draw pieces.\n",
-    "            if color != \"\":\n",
-    "                canvas_board.create_oval( \\\n",
-    "                    x*BOARD_SQUARE_PX_SIZE+4, y*BOARD_SQUARE_PX_SIZE+4, \\\n",
-    "                    (x+1)*BOARD_SQUARE_PX_SIZE-4, (y+1)*BOARD_SQUARE_PX_SIZE-4, \\\n",
-    "                    outline=\"#196F3D\", fill=color) \n",
-    "\n",
-    "    # Draw border lines.\n",
-    "    for x in range(1, BOARD_SQUARE_X):\n",
-    "        canvas_board.create_line( \\\n",
-    "            x * BOARD_SQUARE_PX_SIZE, 0, \\\n",
-    "            x * BOARD_SQUARE_PX_SIZE, BOARD_PX_SIZE, \\\n",
-    "            fill=\"#196F3D\", width=2)\n",
-    "        \n",
-    "    for y in range(1, BOARD_SQUARE_Y):\n",
-    "        canvas_board.create_line( \\\n",
-    "            0, y * BOARD_SQUARE_PX_SIZE, \\\n",
-    "            BOARD_PX_SIZE, y * BOARD_SQUARE_PX_SIZE, \\\n",
-    "            fill=\"#196F3D\", width=2)\n",
-    "\n",
-    "    canvas_board.update()"
-   ]
   },
   {
    "cell_type": "code",
