--- a/study03_python_Tkinter_reversi.ipynb
+++ b/study03_python_Tkinter_reversi.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Study Tkinter through the creation of rever."
+    "# Study Tkinter through creation of reversi."
    ]
   },
   {
