--- a/study04_pyOpenExel_executeMacro_closeExcel.ipynb
+++ b/study04_pyOpenExel_executeMacro_closeExcel.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "source": [
     "## Execute a macro in the excel file.\n",
-    "  1. It can execute public and private macro. / パブリックマクロでもプライベートマクロでもどちらでも実行可能。\n",
+    "  1. It can execute both of public and private macro. / パブリックマクロでもプライベートマクロでもどちらでも実行可能。\n",
     "  1. In the case of the macro is written in a sheet, set the argument as \"Sheet Name.Macro Name\". / シート内にマクロを実装した場合、シート名.マクロ名 を記載する。"
    ]
   },
