--- a/study04_pyOpenExel_executeMacro_closeExcel.ipynb
+++ b/study04_pyOpenExel_executeMacro_closeExcel.ipynb
@@ -16,22 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "relative pth :  Data\\05_openpyxl\\xlsListAllFilesInFolderAndSubfolders.xlsm\n",
-      "absolute path :  C:\\my_work\\GitHub\\study\\Data\\05_openpyxl\\xlsListAllFilesInFolderAndSubfolders.xlsm\n"
+      "relative pth :  Data\\04_pyOpenExel_executeMacro_closeExcel\\xlsListAllFilesInFolderAndSubfolders.xlsm\n",
+      "absolute path :  C:\\my_work\\GitHub\\study\\Data\\04_pyOpenExel_executeMacro_closeExcel\\xlsListAllFilesInFolderAndSubfolders.xlsm\n"
      ]
     }
    ],
    "source": [
     "import pathlib\n",
     "import os\n",
-    "inputFile = \".\\\\Data\\\\05_openpyxl\\\\xlsListAllFilesInFolderAndSubfolders.xlsm\"\n",
+    "inputFile = \".\\\\Data\\\\04_pyOpenExel_executeMacro_closeExcel\\\\xlsListAllFilesInFolderAndSubfolders.xlsm\"\n",
     "\n",
     "inputFile_rel = pathlib.Path(inputFile)\n",
     "print(\"relative pth : \", inputFile_rel)\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "<COMObject Open>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
