--- a/study05-1_DataFrame.ipynb
+++ b/study05-1_DataFrame.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "csv_encoding = 'Shift_JISx0213'\n",
-    "inputFile = \".\\\\Data\\\\05_DateTimeData.csv\"\n",
+    "inputFile = \".\\\\Data\\\\05-1_DateTimeData.csv\"\n",
     "df = pd.read_csv(inputFile,index_col=False, encoding=csv_encoding)\n",
     "display(df.head(5))\n",
     "df.dtypes"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -830,16 +830,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x24ce6c884e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24ce69a4390>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,6 +859,13 @@
    "source": [
     "df_result.plot(kind='bar', stacked=True,  title = \"Number of items.\", figsize=(8, 4), fontsize=12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
