--- a/study05-2_DataFrame.ipynb
+++ b/study05-2_DataFrame.ipynb
@@ -151,7 +151,7 @@
     "df = pd.read_csv(inputFile,index_col=False, encoding=csv_encoding)\n",
     "display(df.head(5))\n",
     "display(df.dtypes)\n",
-    "display(df.shape)\n"
+    "display(df.shape)"
    ]
   },
   {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -780,12 +780,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1639, 6)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "df_rate2 = df_rate[(df_rate['Pro1-1'] >= 30) | (df_rate['Pro1-2'] >= 30) | (df_rate['Pro1-3'] >= 30) | \n",
     "                   (df_rate['Pro2'] >= 30) | (df_rate['Pro3'] >= 30)]\n",
-    "display(df_rate2.head(5))"
+    "display(df_rate2.head(5))\n",
+    "display(df_rate2.shape)"
    ]
   },
   {
@@ -918,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1035,7 @@
     {
      "data": {
       "text/plain": [
-       "(9995, 6)"
+       "(1639, 6)"
       ]
      },
      "metadata": {},
@@ -1036,7 +1046,7 @@
     "df_rate3.update(df_rate)\n",
     "df_rate3 = df_rate3.astype('int64')\n",
     "display(df_rate3.head(5))\n",
-    "display(df.shape)"
+    "display(df_rate3.shape)"
    ]
   },
   {
@@ -1060,8 +1070,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1156,6 +1168,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1639, 5)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1165,7 +1186,17 @@
     "df2['Mean'] = df_rate3[['Pro1-1', 'Pro1-2', 'Pro1-3', 'Pro2', 'Pro3']].mean(axis=1)\n",
     "df2['Std'] = df_rate3[['Pro1-1', 'Pro1-2', 'Pro1-3', 'Pro2', 'Pro3']].std(axis=1)\n",
     "df2['Var'] = df_rate3[['Pro1-1', 'Pro1-2', 'Pro1-3', 'Pro2', 'Pro3']].var(axis=1)\n",
-    "display(df2.head(5))"
+    "display(df2.head(5))\n",
+    "display(df2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df2.to_csv(\".\\\\Data\\\\05-2_ClassfiedList_Sta.csv\")"
    ]
   },
   {
@@ -1208,24 +1239,6 @@
     "import numpy\n",
     "df2.plot(kind='scatter', x='Mean', y='Var',  title = \"Scatter plot of items.\", figsize=(8, 4), fontsize=12)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "sns.pairplot(df2, hue=\"Mean\", size=2.5)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
