--- a/study05-2_DataFrame.ipynb
+++ b/study05-2_DataFrame.ipynb
@@ -147,7 +147,7 @@
     "import pandas as pd\n",
     "\n",
     "csv_encoding = 'Shift_JISx0213'\n",
-    "inputFile = \".\\\\Data\\\\05-2_ClassfiedList.csv\"\n",
+    "inputFile = \".\\\\Data\\\\05-2_ClassfiedList_raw.csv\"\n",
     "df = pd.read_csv(inputFile,index_col=False, encoding=csv_encoding)\n",
     "display(df.head(5))\n",
     "display(df.dtypes)\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,16 +1209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1bbefcdbfd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24843ec98d0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1239,6 +1239,13 @@
     "import numpy\n",
     "df2.plot(kind='scatter', x='Mean', y='Var',  title = \"Scatter plot of items.\", figsize=(8, 4), fontsize=12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
