--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Study Tkinter through creation of reversi."
+    "# Study Tkinter through creation of reversi with AI."
    ]
   },
   {
