--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -26,6 +26,7 @@
     "import random\n",
     "import time\n",
     "import math\n",
+    "import copy\n",
     "import tkinter\n",
     "from tkinter import messagebox\n",
     "\n",
@@ -50,6 +51,7 @@
     "GAME_END = 2\n",
     "HUMAN = 1\n",
     "COMPUTER = 0\n",
+    "TTHINK_LEVEL = 3\n",
     "\n",
     "COLOR_PIECE_BLACK =  \"#566573\"\n",
     "COLOR_PIECE_WHITE =  \"#F8F9F9\"\n",
@@ -130,16 +132,16 @@
     "        \n",
     "    # Count black and white pieces. / 白と黒のピースの数を数える    \n",
     "    def get_pieces(self):\n",
-    "        black_discs = 0\n",
-    "        white_discs = 0\n",
+    "        black_pieces = 0\n",
+    "        white_pieces = 0\n",
     "        for y in range(BOARD_SQUARE_Y):\n",
     "            for x in range(BOARD_SQUARE_X):\n",
     "                disc = self.board[y][x]\n",
     "                if disc == BLACK:\n",
-    "                    black_discs += 1\n",
+    "                    black_pieces += 1\n",
     "                elif disc == WHITE:\n",
-    "                    white_discs += 1\n",
-    "        return (black_discs, white_discs)\n",
+    "                    white_pieces += 1\n",
+    "        return (black_pieces, white_pieces)\n",
     "\n",
     "    # Can place a new piece or not? / ピースを配置できるかどうか    \n",
     "    def is_movable(self, position):\n",
@@ -236,7 +238,60 @@
     "            if len(move_list2) == 0:\n",
     "                return True\n",
     "        \n",
-    "        return False"
+    "        return False\n",
+    "    \n",
+    "    # Evaluate the game\n",
+    "    # Evaluate whether white or black is advantageous.\n",
+    "    # The evaluation value is positive if black is advantageous.\n",
+    "    def evaluation(self):\n",
+    "        eval_val = 0\n",
+    "        \n",
+    "        # When the game end.\n",
+    "        if self.is_game_end():\n",
+    "            (black_pieces, white_pieces) = self.get_pieces()\n",
+    "            eval_val = black_pieces - white_pieces\n",
+    "            if eval_val > 0:\n",
+    "                eval_val += 1000\n",
+    "            elif eval_val < 0:\n",
+    "                eval_val -= 1000\n",
+    "            return eval_val\n",
+    "        \n",
+    "        # Under playing.\n",
+    "        # Count each piece on the corner.\n",
+    "        corner = 0\n",
+    "        for (y,x) in [(0,0), (0,7), (7,0), (7,7)]:\n",
+    "            if self.board[y][x] == BLACK:\n",
+    "                corner += 1\n",
+    "            elif self.board[y][x] == WHITE:\n",
+    "                corner -= 1\n",
+    "                \n",
+    "        # Multiply number of corner peices and weight, then add it to evaluation value\n",
+    "        # Weight = 16\n",
+    "        eval_val += corner * 16\n",
+    "        \n",
+    "        # Count the number of spaces that can be put in a piece.\n",
+    "        move_num = 0\n",
+    "        move_list = self.get_move_list()\n",
+    "        if self.turn == BLACK:\n",
+    "            move_num += len(move_list)\n",
+    "        else:\n",
+    "            move_num -= len(move_list)\n",
+    "        \n",
+    "        # Count the spaces your opponent can put a piece in.\n",
+    "        # Pass the move then count.\n",
+    "        self.move_pass()\n",
+    "        move_list = self.get_move_list()\n",
+    "        if self.turn == BLACK:\n",
+    "            move_num += len(move_list)\n",
+    "        else:\n",
+    "            move_num -= len(move_list)\n",
+    "        self.move_pass()\n",
+    "        \n",
+    "        # Multiply number of spaces and weight, then add it to evaluation value\n",
+    "        # Weight = 2\n",
+    "        eval_val += move_num * 2\n",
+    "        \n",
+    "        return eval_val"
    ]
   },
   {
